готовый код по 1,2 ДЗ, подготовил для написания тестов